// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches starred task with conversation closed snapshot in Teams 1`] = `
<div
  style="opacity: 1;"
>
  <li
    class="Task-listitem"
  >
    <div
      class="ms-Checkbox is-enabled Task-checkbox root-78"
    >
      <input
        class="input-79"
        id="checkbox-3"
        type="checkbox"
      />
      <label
        class="ms-Checkbox-label label-80"
        for="checkbox-3"
      >
        <div
          class="ms-Checkbox-checkbox checkbox-81"
        >
          <i
            aria-hidden="true"
            class="ms-Checkbox-checkmark checkmark-85"
            data-icon-name="CheckMark"
            role="presentation"
          >
            
          </i>
        </div>
      </label>
    </div>
    <span
      class="Task-title"
    >
      <div>
        mockTitle
      </div>
    </span>
    <button
      class="ms-Link Task-star-link root-86"
      type="button"
    >
      <i
        aria-hidden="true"
        class="Task-starred-icon root-87"
        data-icon-name="FavoriteStarFill"
        role="presentation"
      >
        
      </i>
    </button>
    <button
      class="ms-Link Task-conversation-link root-86"
      type="button"
    >
      <i
        aria-hidden="true"
        class="Task-conversation-closed-icon root-89"
        data-icon-name="Chat"
        role="presentation"
      >
        
      </i>
    </button>
  </li>
</div>
`;

exports[`matches unstarred task snapshot with conversation open in Teams 1`] = `
<div
  style="opacity: 1;"
>
  <li
    class="Task-listitem"
  >
    <div
      class="ms-Checkbox is-enabled Task-checkbox root-78"
    >
      <input
        class="input-79"
        id="checkbox-4"
        type="checkbox"
      />
      <label
        class="ms-Checkbox-label label-80"
        for="checkbox-4"
      >
        <div
          class="ms-Checkbox-checkbox checkbox-81"
        >
          <i
            aria-hidden="true"
            class="ms-Checkbox-checkmark checkmark-85"
            data-icon-name="CheckMark"
            role="presentation"
          >
            
          </i>
        </div>
      </label>
    </div>
    <span
      class="Task-title"
    >
      <div>
        mockTitle
      </div>
    </span>
    <button
      class="ms-Link Task-star-link root-86"
      type="button"
    >
      <i
        aria-hidden="true"
        class="Task-starred-icon root-87"
        data-icon-name="FavoriteStarFill"
        role="presentation"
      >
        
      </i>
    </button>
    <button
      class="ms-Link Task-conversation-link root-86"
      type="button"
    >
      <i
        aria-hidden="true"
        class="Task-conversation-open-icon root-91"
        data-icon-name="ChatSolid"
        role="presentation"
      >
        
      </i>
    </button>
  </li>
</div>
`;

exports[`renders starred task snapshot 1`] = `
<div
  style="opacity: 1;"
>
  <li
    class="Task-listitem"
  >
    <div
      class="ms-Checkbox is-enabled Task-checkbox root-78"
    >
      <input
        class="input-79"
        id="checkbox-1"
        type="checkbox"
      />
      <label
        class="ms-Checkbox-label label-80"
        for="checkbox-1"
      >
        <div
          class="ms-Checkbox-checkbox checkbox-81"
        >
          <i
            aria-hidden="true"
            class="ms-Checkbox-checkmark checkmark-85"
            data-icon-name="CheckMark"
            role="presentation"
          >
            
          </i>
        </div>
      </label>
    </div>
    <span
      class="Task-title"
    >
      <div>
        mockTitle
      </div>
    </span>
    <button
      class="ms-Link Task-star-link root-86"
      type="button"
    >
      <i
        aria-hidden="true"
        class="Task-starred-icon root-87"
        data-icon-name="FavoriteStarFill"
        role="presentation"
      >
        
      </i>
    </button>
  </li>
</div>
`;

exports[`renders unstarred task snapshot 1`] = `
<div
  style="opacity: 1;"
>
  <li
    class="Task-listitem"
  >
    <div
      class="ms-Checkbox is-enabled Task-checkbox root-78"
    >
      <input
        class="input-79"
        id="checkbox-2"
        type="checkbox"
      />
      <label
        class="ms-Checkbox-label label-80"
        for="checkbox-2"
      >
        <div
          class="ms-Checkbox-checkbox checkbox-81"
        >
          <i
            aria-hidden="true"
            class="ms-Checkbox-checkmark checkmark-85"
            data-icon-name="CheckMark"
            role="presentation"
          >
            
          </i>
        </div>
      </label>
    </div>
    <span
      class="Task-title"
    >
      <div>
        mockTitle
      </div>
    </span>
    <button
      class="ms-Link Task-star-link root-86"
      type="button"
    >
      <i
        aria-hidden="true"
        class="Task-unstarred-icon root-87"
        data-icon-name="FavoriteStar"
        role="presentation"
      >
        
      </i>
    </button>
  </li>
</div>
`;
